# neo

./: .gitignore  BUILD.bazel  LICENSE  README.md  TESTING.md  ansible.cfg  early-init.el  gnus.el  init.el  requirements.txt  setup.sh  test-early-init.el
.github/workflows/: publish_setup.yml
ansible/playbooks/emacs/: emacs.yaml
ansible/playbooks/emacs-install/: main.yaml
ansible/roles/emacs-install/: README.org
ansible/roles/emacs-install/defaults/: main.yaml
ansible/roles/emacs-install/files/: emacs-info-dir-org-manuals.patch
ansible/roles/emacs-install/meta/: main.yaml
ansible/scripts/: o-emacs-daily-build  o-emacs-daily-cron
core/: REQUIREMENTS-elpaca-version-scoping.md  early-init-utils.el  neo-application-test.el  neo-application.el  neo-asset.el  neo-config-test.el  neo-config.el  neo-custom.el  neo-early-init-utils-test.el  neo-early-init-utils.el  neo-elpaca-manager-faces-test.el  neo-elpaca-manager-faces.el  neo-elpaca.el  neo-extensions-detail.el  neo-extensions-digest-test.el  neo-extensions-digest.el  neo-extensions-fetch.el  neo-extensions-summary.el  neo-extensions-test.el  neo-extensions.el  neo-fonts.el  neo-framework-test.el  neo-framework.el  neo-list-utils.el  neo-logging.el  neo-packages.el  neo-processes.el  neo-snapshot.el  neo-struct.el  neo-treesit-test.el  neo-treesit.el  neo-use-package-test.el  neo-use-package.el  neo-utils.el  neo-window.el  neo-wizard.el  neo.el
scripts/: build  emacs-test-setup.el  local-digest  o-neo-sync  o-neo-test  o-test  o-validate-extensions  sync  vm
scripts/font_fetcher/: o-font-fetcher
scripts/ghsync/: BUILD.bazel  main.py  o-ghsync  setup.py
scripts/ghsync/cmd/: BUILD.bazel  model.py  schema.py  sync.py
scripts/ghsync/utils/: BUILD.bazel  auth.py  db.py
(+27 files in other folders)
