load("//build/copybara:copybara.bzl", "copybara_workflow")

copybara_workflow(
    name = "neo",
    moves = {
        "devex/editors/emacs": "",
        "EXTERNAL_LICENSE": "LICENSE",
        "dot_gitignore": ".gitignore",
        "infra/ansible": "ansible",
    },
    excludes = [
        "devex/editors/emacs/assets/hacker.png",
        "devex/editors/emacs/BUILD.bazel",
        "devex/editors/emacs/LICENSE_INTERNAL_README",
    ],
    includes = [
        "devex/editors/emacs/**",
        # "infra/ansible/roles/emacs/**",
        # "infra/ansible/roles/emacs-neo/**",
        # "infra/ansible/playbooks/emacs-install/**",
    ],
    target_repo = "poly-repo/neo",
)


# copybara_workflow(
#     name = "workflow",
# )



