load("//build/bzl:python.bzl", "o_py_binary", "o_py_library")

o_py_binary(
    name = "main",
    srcs = ["main.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//infra/tools/ghsync/cmd:cmd_lib",
        "@pip//click",
    ],
)

o_py_library(
    name = "ghsync_lib",
    srcs = [
        "__init__.py",
        "main.py",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        "//infra/tools/ghsync/cmd:cmd_lib",
        "@pip//click",
    ],
)
